@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  27 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru> +acutil-6.1.1.ebuild:
+  version bump
+
+*acutil-6.1.1 ( 27 Mar 2010 )
+
   02 Feb 2010; <slep@gentoo.org> -acutil-5.4.12.ebuild,
   acutil-5.4.14.ebuild:
   fix QA using python eclass
